--- a/package.json
+++ b/package.json
@@ -1,27 +1,35 @@
 {
-  "name": "sleepy-spiral",
+  "name": "gekido-web-react",
+  "private": true,
+  "version": "0.0.0",
   "type": "module",
-  "version": "0.0.1",
   "scripts": {
-    "dev": "astro dev",
-    "build": "astro build",
-    "preview": "astro preview",
-    "astro": "astro"
+    "dev": "bunx --bun vite",
+    "build": "tsc && vite build",
+    "lint": "eslint . --ext ts,tsx --report-unused-disable-directives --max-warnings 0",
+    "preview": "vite preview"
   },
   "dependencies": {
-    "@astrojs/react": "^4.0.0",
-    "@astrojs/tailwind": "^5.1.3",
-    "@types/react": "^18.3.14",
-    "@types/react-dom": "^18.3.2",
-    "astro": "^5.0.4",
-    "astro-icon": "^1.1.5",
-    "prettier": "^3.4.2",
-    "prettier-plugin-astro": "^0.14.1",
-    "react": "^19.0.0",
-    "react-dom": "^19.0.0",
-    "tailwindcss": "^3.4.16"
+    "@tailwindcss/postcss": "^4.1.4",
+    "react": "^18.2.0",
+    "react-dom": "^18.2.0",
+    "react-icons": "^5.0.1",
+    "react-markdown": "^10.1.0",
+    "react-router-dom": "^6.22.0"
   },
-  "volta": {
-    "node": "22.14.0"
+  "devDependencies": {
+    "@types/react": "^18.2.55",
+    "@types/react-dom": "^18.2.19",
+    "@typescript-eslint/eslint-plugin": "^6.21.0",
+    "@typescript-eslint/parser": "^6.21.0",
+    "@vitejs/plugin-react": "^4.2.1",
+    "autoprefixer": "^10.4.17",
+    "eslint": "^8.56.0",
+    "eslint-plugin-react-hooks": "^4.6.0",
+    "eslint-plugin-react-refresh": "^0.4.5",
+    "postcss": "^8.5.3",
+    "tailwindcss": "^4.1.4",
+    "typescript": "^5.2.2",
+    "vite": "^5.1.0"
   }
 }
